--- a/public/acm/AlaatvCustomFiles/css/page/set-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/set-show.css
@@ -77,3 +77,8 @@
     align-content: center;
     justify-content: center;
 }
+
+.setPamphlet.a--list2 .a--list2-item .a--list2-action i {
+    font-size: 2rem;
+    color: #5867dd;
+}
