--- a/public/acm/AlaatvCustomFiles/css/page/user/dashboard.css
+++ b/public/acm/AlaatvCustomFiles/css/page/user/dashboard.css
@@ -228,6 +228,13 @@
 }
 
 
+.sortingFilterCol::-webkit-scrollbar {
+    display: none;
+}
+.sortingFilterCol {
+    overflow-y: auto;
+    -ms-overflow-style: none;
+}
 
 
 
