--- a/theme/default/src/sass/framework/_include.scss
+++ b/theme/default/src/sass/framework/_include.scss
@@ -6,6 +6,6 @@
 @import "base/include";
 
 //== Components
-@import "components/base/include";
-@import "components/general/include";
+@import "components/base/include";// 384 KB
+@import "components/general/include"; // 823 KB
 //@import "components/plugins/include";
