--- a/theme/default/src/sass/snippets/_include.scss
+++ b/theme/default/src/sass/snippets/_include.scss
@@ -1,6 +1,6 @@
 //
 //** Snippets Include
-// 
+//
 
 ////== Base Snippets
 //@import "base/layout-builder/base";
@@ -18,7 +18,7 @@
 //@import "custom/invoices/invoice-2";
 
 
-@import "custom/pages/user/login-1";
+//@import "custom/pages/user/login-1";
 //@import "custom/pages/user/login-2";
 //@import "custom/pages/user/login-5";
 //@import "custom/pages/user/login-6";
