--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
@@ -143,6 +143,7 @@
     -webkit-box-shadow: 0 -5px 10px 2px rgba(255,255,255,1);
     -moz-box-shadow: 0 -5px 10px 2px rgba(255,255,255,1);
     box-shadow: 0 -5px 10px 2px rgb(255, 255, 255);
+    z-index: 2;
 }
 
 .SearchBoxFilter .GroupFilters .body .showMoreItems i {
@@ -288,6 +289,7 @@
 .pageTags .m-list-badge .m-badge {
     white-space: nowrap;
     min-width: auto;
+    line-height: 2.4rem;
 }
 
 .SearchBoxFilterColumn {
