--- a/theme/default/src/sass/framework/components/general/accordion/_accordion.scss
+++ b/theme/default/src/sass/framework/components/general/accordion/_accordion.scss
@@ -6,27 +6,27 @@
 @mixin m-build-component--accordion-default-base() {
 	$m-accordion-border: 6px;
 
-	.m-accordion {	
-		.m-accordion__item {	
-			overflow: hidden;	
+	.m-accordion {
+		.m-accordion__item {
+			overflow: hidden;
 			@include rounded {
 				border-radius: $m-accordion-border;
 			}
 
 			.m-accordion__item-head {
 				display: table;
-				padding: 1rem 2rem; 
-				width: 100%;			
-				overflow: hidden;	
+				padding: 1rem 2rem;
+				width: 100%;
+				overflow: hidden;
 
 				.m-accordion__item-icon {
 					display: table-cell;
 					vertical-align: middle;
 					line-height: 0;
-					padding-right: 1rem;										
+					padding-right: 1rem;
 
-					> i {						 
-						display: inline-block; 
+					> i {
+						display: inline-block;
 						font-size: 2rem;
 					}
 				}
@@ -34,28 +34,28 @@
 				.m-accordion__item-title {
 					display: table-cell;
 					vertical-align: middle;
-					width: 100%;					 	
-					font-size: get-font-size(regular, '++');			 													 
+					width: 100%;
+					font-size: get-font-size(regular, '++');
 				}
 
 				.m-accordion__item-mode{
 	                @include la-icon( array-get($m--icon-codes, minus) );
-	                font-size: 1.3rem;	                
+	                font-size: 1.3rem;
 	            }
-	                   
+
 
 	            &.collapsed {
 	                .m-accordion__item-mode {
-	                    @include la-icon( array-get($m--icon-codes, plus) ); 
+	                    @include la-icon( array-get($m--icon-codes, plus) );
 	                }
-	            }          
+	            }
 
 				transition: array-get($m--transition, general);
 
-				&:hover {			
-					transition: array-get($m--transition, general);			 
+				&:hover {
+					transition: array-get($m--transition, general);
 					cursor: pointer;
-				}	
+				}
 			}
 
 			.m-accordion__item-body {
@@ -69,20 +69,20 @@
 							margin-bottom: 0;
 						}
 					}
-				}				
+				}
 			}
 
 			&:last-child {
 				margin-bottom: 0;
-			}			
+			}
 		}
 
 		//== Default style
 		&.m-accordion--default {
-			.m-accordion__item {					
-				margin-bottom: 1rem;		
-			}	
-		} 
+			.m-accordion__item {
+				margin-bottom: 1rem;
+			}
+		}
 
 		//== Bordered style
 		&.m-accordion--bordered {
@@ -102,21 +102,21 @@
 			.m-accordion__item:first-child {
 				border-bottom-left-radius: 0;
 				border-bottom-right-radius: 0;
-			}				
-		} 
+			}
+		}
 
 		//== Section style
 		&.m-accordion--section {
 			.m-accordion__item {
 				.m-accordion__item-head {
 					&.collapsed {
-						.m-accordion__item-mode {						
-							> i {					 		 			 
+						.m-accordion__item-mode {
+							> i {
 
 								&:before {
-							        content: "\f2c2";						        
+							        content: "\f2c2";
 							    }
-							}    
+							}
 						}
 					}
 				}
@@ -125,7 +125,7 @@
 					> span,
 					.m-accordion__item-content {
 						padding-top: 0rem;
-					}				
+					}
 				}
 
 				margin-bottom: 2rem;
@@ -133,25 +133,25 @@
 				&:last-child {
 					margin-bottom: 0;
 				}
-			}	
+			}
 		}
 
 		//== Arrow style
 		&.m-accordion--toggle-arrow {
-			.m-accordion__item {				
+			.m-accordion__item {
 				.m-accordion__item-head {
 					.m-accordion__item-mode{
 		                @include la-icon( array-get($m--icon-codes, up) );
 		                font-size: 1.3rem;
-		            }		                   
+		            }
 
 		            &.collapsed {
 		                .m-accordion__item-mode {
-		                    @include la-icon( array-get($m--icon-codes, down) ); 
+		                    @include la-icon( array-get($m--icon-codes, down) );
 		                }
-		            }     			
+		            }
 				}
-			}	
+			}
 		}
 
 		//== Padding style
@@ -160,10 +160,10 @@
 				.m-accordion__item-head {
 				    padding: 1.5rem 2rem;
 				}
-			}	
+			}
 		}
-	}	 
-}						 
+	}
+}
 
 //== Component Skin
 @mixin m-build-component--accordion-default-skin() {
@@ -174,44 +174,44 @@
 		//== Default Skin
 		&.m-accordion--bordered,
 		&.m-accordion--default {
-			.m-accordion__item {				
+			.m-accordion__item {
 				border: 1px solid get-color($skin, panel);
-				background-color: #fff; 
+				background-color: #fff;
 
 				.m-accordion__item-head {
 					&.collapsed {
-						background-color: #fff;						 
-					}	
+						background-color: #fff;
+					}
 
 					&,
 					&:hover {
 						background-color: get-color($skin, panel,'-');
-					}			
-					
-					.m-accordion__item-mode {						 
-						color: get-color($skin, regular, '-----');						 
 					}
-				}	
+
+					.m-accordion__item-mode {
+						color: get-color($skin, regular, '-----');
+					}
+				}
 
 				.m-accordion__item-body {
 					border-top: 1px solid get-color($skin, panel);
-				}							 	
+				}
 
 				.m-accordion__item-head.collapsed + .m-accordion__item-body {
 					border-top: 0;
-				}			 
-			}	
-		}	
+				}
+			}
+		}
 
 		//== Solid Skin
 		&.m-accordion--solid {
 			.m-accordion__item {
 				background-color: get-color($skin, panel, '--');
-					
+
 				.m-accordion__item-head {
 					&.collapsed {
 						background-color: get-color($skin, panel, '--');
-					}						
+					}
 
 					&,
 					&:hover {
@@ -220,8 +220,8 @@
 				}
 
 				.m-accordion__item-body {
-					background-color: #fff !important; 
-				}	
+					background-color: #fff !important;
+				}
 			}
 		}
 
@@ -232,70 +232,70 @@
 
 				.m-accordion__item-head {
 					background-color: get-color($skin, panel, '--');
-					color: get-brand-color() !important;					
+					color: get-brand-color() !important;
 
-					.m-accordion__item-mode {					 								 			 
+					.m-accordion__item-mode {
 						color: get-brand-color() !important;
-					}					 				
+					}
 
-					//== Collapsed Skin					
+					//== Collapsed Skin
 					&.collapsed {
-						color: lighten(get-brand-color(), 5%) !important; 										 
-					
-						.m-accordion__item-mode {															 			 
-							color: lighten(get-brand-color(), 5%) !important;							    
+						color: lighten(get-brand-color(), 5%) !important;
+
+						.m-accordion__item-mode {
+							color: lighten(get-brand-color(), 5%) !important;
 						}
-					}							
+					}
 				}
 
-				//== Body Skin	
+				//== Body Skin
 				.m-accordion__item-body {
 					border-top: none;
 					background-color: get-color($skin, panel, '--');
-				}		
-			}	
-		}		
-	}                    
+				}
+			}
+		}
+	}
 }
 
 //== Component States
 @mixin m-build-component--accordion-default-states() {
-	.m-accordion {		
-		@each $name, $color in $m--state-colors {		
+	.m-accordion {
+		@each $name, $color in $m--state-colors {
 			.m-accordion__item--#{$name} {
-				border: 1px solid array-get($color, base) !important;				 		
+				border: 1px solid array-get($color, base) !important;
 				background-color: array-get($color, base) !important;
 
-				.m-accordion__item-head {	
+				.m-accordion__item-head {
 
 					//== Open state
 					&,
 					&:hover {
 						background-color: darken(array-get($color, base), 5%) !important;
 					}
-					
-					.m-accordion__item-mode {						
-						color: array-get($color, inverse) !important;												
-					}					
 
-					//== Default state					
+					.m-accordion__item-mode {
+						color: array-get($color, inverse) !important;
+					}
+
+					//== Default state
 					&.collapsed {
-						background-color: array-get($color, base) !important;												 
-					
-						.m-accordion__item-mode {						 							 			 
-							color: array-get($color, inverse) !important;						   
+						background-color: array-get($color, base) !important;
+
+						.m-accordion__item-mode {
+							color: array-get($color, inverse) !important;
 						}
-					}	
+					}
 
 					> span {
-						color: array-get($color, inverse) !important;						 
-					}			
+						color: array-get($color, inverse) !important;
+					}
 				}
 
 				.m-accordion__item-body {
-					background-color: #fff !important; 
-				}			
-			}					 			 
+					background-color: #fff !important;
+				}
+			}
 		}
 	}
 }
@@ -304,10 +304,10 @@
 //== Build Component Base
 @include m-build-component--accordion-default-base();
 
-//== Build Component Skin
-@include m-build-component--accordion-default-skin();
-
-//== Build Component States
-@include m-build-component--accordion-default-states();	
+////== Build Component Skin
+//@include m-build-component--accordion-default-skin();
+//
+////== Build Component States
+//@include m-build-component--accordion-default-states();
 
 
