--- a/theme/default/src/sass/framework/components/general/buttons/_buttons.scss
+++ b/theme/default/src/sass/framework/components/general/buttons/_buttons.scss
@@ -7,7 +7,7 @@ $m-pill-radius: 60px;
 //== Component Base
 @mixin m-build-component--buttons-base() {
     // base button
-    .btn {                
+    .btn {
         font-family: array-get($m--font-families, regular);
         box-shadow: none !important;
 
@@ -33,7 +33,7 @@ $m-pill-radius: 60px;
         @include rounded {
             border-radius: array-get($m--buttons, layout, self, border-radius);
         }
-        
+
         // pill style
         &.m-btn--pill {
             border-radius: $m-pill-radius;
@@ -50,7 +50,7 @@ $m-pill-radius: 60px;
 
             &:hover {
                 border-color: #ffffff !important;
-            }            
+            }
         }
 
         // Wide buttons
@@ -62,7 +62,7 @@ $m-pill-radius: 60px;
                 padding-left: 2 * array-get($m--buttons, layout, default, sm, self, padding, x);
                 padding-right: 2 * array-get($m--buttons, layout, default, sm, self, padding, x);
             }
-        
+
             &.btn-lg {
                 padding-left: 2 * array-get($m--buttons, layout, default, lg, self, padding, x);
                 padding-right: 2 * array-get($m--buttons, layout, default, lg, self, padding, x);
@@ -80,12 +80,12 @@ $m-pill-radius: 60px;
                 padding: array-get($m--buttons, layout, custom, sm, self, padding, y) array-get($m--buttons, layout, custom, sm, self, padding, x);
                 font-size: array-get($m--buttons, layout, custom, sm, self, font-size);
             }
-        
+
             &.btn-lg {
                 padding: array-get($m--buttons, layout, custom, lg, self, padding, y) array-get($m--buttons, layout, custom, lg, self, padding, x);
                 font-size: array-get($m--buttons, layout, custom, lg, self, font-size);
             }
-        }       
+        }
 
         // label states
         @each $name, $color in $m--state-colors {
@@ -143,8 +143,8 @@ $m-pill-radius: 60px;
             }
 
             @include icons-size( array-get($m--buttons, layout, default, default, icon, font-size) );
-        
-            > span {                
+
+            > span {
                 padding-left: 0.5em;
                 display: table-cell;
                 vertical-align: middle;
@@ -153,8 +153,8 @@ $m-pill-radius: 60px;
 
         &.m-btn--icon-right {
             > span {
-                > span {     
-                    padding-left: 0;           
+                > span {
+                    padding-left: 0;
                     padding-right: 0.6em;
                 }
             }
@@ -182,18 +182,18 @@ $m-pill-radius: 60px;
             width: array-get($m--buttons, layout, default, default, icon, icon-only-size);
             height: array-get($m--buttons, layout, default, default, icon, icon-only-size);
 
-            > i {               
+            > i {
                 line-height: 0;
                 display: inline-block;
                 position: absolute;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-            }           
+            }
 
             @include icons-size( array-get($m--buttons, layout, default, default, icon, font-size) );
 
-            &.th-btn-pill { 
+            &.th-btn-pill {
                 border-radius: 100%;
             }
 
@@ -250,7 +250,7 @@ $m-pill-radius: 60px;
         &.btn-block  {
             > span {
                 text-align: center;
-                margin: 0 auto;  
+                margin: 0 auto;
             }
         }
     }
@@ -298,7 +298,7 @@ $m-pill-radius: 60px;
                 }
 
                 &.m-btn--pill-first {
-                    border-radius: $m-pill-radius 0 0 $m-pill-radius; 
+                    border-radius: $m-pill-radius 0 0 $m-pill-radius;
                 }
             }
         }
@@ -319,7 +319,7 @@ $m-pill-radius: 60px;
         }
 
         .m-btn--pill-first {
-            border-radius: $m-pill-radius $m-pill-radius 0 0; 
+            border-radius: $m-pill-radius $m-pill-radius 0 0;
         }
     }
 
@@ -327,15 +327,15 @@ $m-pill-radius: 60px;
     @each $name, $color in $m--state-colors {
         &.btn-outline-#{$name}.m-btn--air,
         &.btn-#{$name}.m-btn--air,
-        &.m-btn--gradient-from-#{$name}.m-btn--air {
-            box-shadow: 0px 5px 10px 2px rgba(array-get($color, base), 0.19) !important;
-
-            &.focus,
-            &:focus,
-            &:hover {
-                box-shadow: 0px 5px 10px 2px rgba(array-get($color, base), 0.36) !important;
-            }   
-        }
+        //&.m-btn--gradient-from-#{$name}.m-btn--air {
+        //    box-shadow: 0px 5px 10px 2px rgba(array-get($color, base), 0.19) !important;
+        //
+        //    &.focus,
+        //    &:focus,
+        //    &:hover {
+        //        box-shadow: 0px 5px 10px 2px rgba(array-get($color, base), 0.36) !important;
+        //    }
+        //}
 
         &.btn-outline-#{$name} {
             &.focus,
@@ -344,7 +344,7 @@ $m-pill-radius: 60px;
                 border-color: array-get($color, base);
                 background: array-get($color, base);
                 color: array-get($color, inverse);
-            } 
+            }
         }
 
         &.btn + .btn.dropdown-toggle {
@@ -369,10 +369,10 @@ $m-pill-radius: 60px;
                 }
             }
         }
-    }  
+    }
 
     // Button outline fix
-    button{ 
+    button{
         &:active,
         &:focus {
             outline: none !important;
@@ -382,148 +382,148 @@ $m-pill-radius: 60px;
 
 //== Component Skin
 @mixin m-build-component--buttons-skin() {
-    $skin: get-default-skin();
-
-    .btn {  
-        // standart buttons  
-        &.btn-default,
-        &.btn-secondary {
-            background: white;
-            border-color: array-get($m--forms, input, skins, $skin, default, border, default);
-
-            i {
-                color: get-color($skin, regular, '-');
-            }
-
-            &:hover:not(:disabled),
-            &.active,
-            &:active,
-            &:focus,
-            .show > &.dropdown-toggle {
-                border-color: array-get($m--forms, input, skins, $skin, default, border, default);
-                background-color: get-color($skin, panel, '-');
-            }
-
-            &.disabled,
-            &:disabled {
-                border-color: array-get($m--forms, input, skins, $skin, default, border, disabled);
-            } 
-        }
-
-        // air buttons
-        &.m-btn--air {
-            &.btn-default,
-            &.btn-secondary {
-                box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, default) !important;
-                border-color: #ffffff !important;
-                
-                &.focus,
-                &:focus,
-                &:hover:not(:disabled):not(.active) {
-                    box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, hover) !important;
-                    background: get-brand-color() !important;
-                    color: get-brand-inverse-color(inverse) !important;
-                    border-color: get-brand-color() !important;
-
-                    i {
-                        color: get-brand-inverse-color(inverse) !important;
-                    }
-                }            
-            }
-        }
-
-        // hover buttons
-        @each $name, $color in $m--state-colors {
-            // standart buttons  
-            &.m-btn--hover-#{$name} {
-                &:not(.btn-secondary):not(.btn-outline-light) {
-                    background: none;
-                    color: get-color($skin, regular);
-
-                    i {
-                        color: get-color($skin, regular, '---');   
-                    }
-                }                
-
-                &:hover,
-                &.active,
-                &:active,
-                &:focus,
-                .show > &.dropdown-toggle {
-                    border-color: array-get($color, base) !important;
-                    color: array-get($color, inverse) !important;
-
-                    i {
-                        color: array-get($color, inverse) !important;
-                    }
-                    
-                    background-color: array-get($color, base) !important;
-                }
-            }
-
-
-            // gradient buttons  
-            &.m-btn--gradient-from-#{$name} {
-                color: array-get($color, inverse);
-                border: 0 !important;
-
-                @each $name2, $color2 in $m--state-colors {
-                    &.m-btn--gradient-to-#{$name2} {
-                        @include gradient-bg( array-get($color, base), 135deg,  array-get($color, base) 30%, array-get($color2, base) 100% ); 
-
-                        &:hover,
-                        &.active,
-                        &:active,
-                        &:focus,
-                        .show > &.dropdown-toggle {
-                            @include gradient-bg( darken(array-get($color, base), 6%), 135deg,  darken(array-get($color, base), 6%) 30%, darken(array-get($color2, base), 6%) 100% ); 
-                        }     
-                    }
-                }
-            }
-
-            &.btn-#{$name} {
-                color: array-get($color, inverse); 
-
-                &.active,
-                &.focus,
-                &:focus,
-                &:hover:not(:disabled) {
-                    color: array-get($color, inverse) !important; 
-                } 
-            }
-
-            &.btn-outline-#{$name} {
-                color: array-get($color, base);
-
-                &.active,
-                &.focus,
-                &:focus,
-                &:hover:not(:disabled) {
-                    color: array-get($color, inverse) !important; 
-                } 
-            }
-        }
-    } 
-
-    // air button group
-    .btn-group {
-        &.m-btn-group--air {
-            box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, default) !important;
-            
-            .btn-default,
-            .btn-secondary {
-                border-color: #ffffff !important;
-                
-                &.focus,
-                &:focus,
-                &:hover:not(:disabled) {
-                    background: #ffffff !important;
-                    box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, default) !important;
-                }            
-            }
-        }
-    }
+    //$skin: get-default-skin();
+    //
+    //.btn {
+    //    // standart buttons
+    //    &.btn-default,
+    //    &.btn-secondary {
+    //        background: white;
+    //        border-color: array-get($m--forms, input, skins, $skin, default, border, default);
+    //
+    //        i {
+    //            color: get-color($skin, regular, '-');
+    //        }
+    //
+    //        &:hover:not(:disabled),
+    //        &.active,
+    //        &:active,
+    //        &:focus,
+    //        .show > &.dropdown-toggle {
+    //            border-color: array-get($m--forms, input, skins, $skin, default, border, default);
+    //            background-color: get-color($skin, panel, '-');
+    //        }
+    //
+    //        &.disabled,
+    //        &:disabled {
+    //            border-color: array-get($m--forms, input, skins, $skin, default, border, disabled);
+    //        }
+    //    }
+    //
+    //    // air buttons
+    //    &.m-btn--air {
+    //        &.btn-default,
+    //        &.btn-secondary {
+    //            box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, default) !important;
+    //            border-color: #ffffff !important;
+    //
+    //            &.focus,
+    //            &:focus,
+    //            &:hover:not(:disabled):not(.active) {
+    //                box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, hover) !important;
+    //                background: get-brand-color() !important;
+    //                color: get-brand-inverse-color(inverse) !important;
+    //                border-color: get-brand-color() !important;
+    //
+    //                i {
+    //                    color: get-brand-inverse-color(inverse) !important;
+    //                }
+    //            }
+    //        }
+    //    }
+    //
+    //    // hover buttons
+    //    @each $name, $color in $m--state-colors {
+    //        // standart buttons
+    //        &.m-btn--hover-#{$name} {
+    //            &:not(.btn-secondary):not(.btn-outline-light) {
+    //                background: none;
+    //                color: get-color($skin, regular);
+    //
+    //                i {
+    //                    color: get-color($skin, regular, '---');
+    //                }
+    //            }
+    //
+    //            &:hover,
+    //            &.active,
+    //            &:active,
+    //            &:focus,
+    //            .show > &.dropdown-toggle {
+    //                border-color: array-get($color, base) !important;
+    //                color: array-get($color, inverse) !important;
+    //
+    //                i {
+    //                    color: array-get($color, inverse) !important;
+    //                }
+    //
+    //                background-color: array-get($color, base) !important;
+    //            }
+    //        }
+    //
+    //
+    //        // gradient buttons
+    //        &.m-btn--gradient-from-#{$name} {
+    //            color: array-get($color, inverse);
+    //            border: 0 !important;
+    //
+    //            @each $name2, $color2 in $m--state-colors {
+    //                &.m-btn--gradient-to-#{$name2} {
+    //                    @include gradient-bg( array-get($color, base), 135deg,  array-get($color, base) 30%, array-get($color2, base) 100% );
+    //
+    //                    &:hover,
+    //                    &.active,
+    //                    &:active,
+    //                    &:focus,
+    //                    .show > &.dropdown-toggle {
+    //                        @include gradient-bg( darken(array-get($color, base), 6%), 135deg,  darken(array-get($color, base), 6%) 30%, darken(array-get($color2, base), 6%) 100% );
+    //                    }
+    //                }
+    //            }
+    //        }
+    //
+    //        &.btn-#{$name} {
+    //            color: array-get($color, inverse);
+    //
+    //            &.active,
+    //            &.focus,
+    //            &:focus,
+    //            &:hover:not(:disabled) {
+    //                color: array-get($color, inverse) !important;
+    //            }
+    //        }
+    //
+    //        &.btn-outline-#{$name} {
+    //            color: array-get($color, base);
+    //
+    //            &.active,
+    //            &.focus,
+    //            &:focus,
+    //            &:hover:not(:disabled) {
+    //                color: array-get($color, inverse) !important;
+    //            }
+    //        }
+    //    }
+    //}
+    //
+    //// air button group
+    //.btn-group {
+    //    &.m-btn-group--air {
+    //        box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, default) !important;
+    //
+    //        .btn-default,
+    //        .btn-secondary {
+    //            border-color: #ffffff !important;
+    //
+    //            &.focus,
+    //            &:focus,
+    //            &:hover:not(:disabled) {
+    //                background: #ffffff !important;
+    //                box-shadow: array-get($m--buttons, skins, $skin, air, box-shadow, default) !important;
+    //            }
+    //        }
+    //    }
+    //}
 }
 
 //== Build Component Base
