--- a/theme/default/src/sass/framework/components/general/forms/_layout.scss
+++ b/theme/default/src/sass/framework/components/general/forms/_layout.scss
@@ -16,13 +16,13 @@
             font-size: get-font-size(regular);
 
             &.col-form-label {
-                padding-top: array-get($m--forms, input, layout, self, size, default, padding, y); 
-                //padding-bottom: array-get($m--forms, input, layout, self, size, default, padding, y); 
+                padding-top: array-get($m--forms, input, layout, self, size, default, padding, y);
+                //padding-bottom: array-get($m--forms, input, layout, self, size, default, padding, y);
             }
         }
 
     	.m-form__group {
-            margin-bottom: 0;    		
+            margin-bottom: 0;
             padding-top: 15px;
             padding-bottom: 15px;
 
@@ -40,18 +40,18 @@
                 display: inline-block;
                 font-weight: get-font-weight(normal);
                 font-size: get-font-size(regular);
-                padding-top: array-get($m--forms, input, layout, self, size, default, padding, y); 
+                padding-top: array-get($m--forms, input, layout, self, size, default, padding, y);
             }
 
             &.m-form__group--first {
                 padding-top: 0;
             }
-            
+
 
             &.m-form__group--last {
                 padding-bottom: 0;
             }
-            
+
             @include desktop() {
                 &:first-child {
                     padding-top: 0;
@@ -88,7 +88,7 @@
                     width: 100%;
                 }
             }
-    	}        
+    	}
 
         //== Form control help
     	.m-form__help {
@@ -113,7 +113,7 @@
             &:last-child,
             &.m-form__section--last {
                 margin-bottom: 0;
-            }       
+            }
         }
 
         //== Form separator
@@ -127,7 +127,7 @@
 
             &.m-form__seperator--space-2x {
                 margin: 30px 0;
-            }           
+            }
 
             &.m-form__seperator--space-3x {
                 margin: 40px 0;
@@ -138,7 +138,7 @@
         .m-form__heading {
             padding: 0;
             margin: 0 0 15px 0;
-            
+
             .m-form__heading-title {
                 font-weight: get-font-weight(bolder);
                 font-size: get-font-size(regular, '+++');
@@ -189,22 +189,22 @@
                 margin-top: $space;
 
                 &.m-form__actions--top {
-                    margin-top: 0; 
+                    margin-top: 0;
                     margin-bottom: $space;
                 }
             }
         }
 
         //== form layout options
-        
+
         // fit form option
         &.m-form--fit {
             .m-form__content,
-            .m-form__heading, 
+            .m-form__heading,
             .m-form__group {
                 padding-left: $space;
                 padding-right: $space;
-            }             
+            }
         }
 
         // form labels right aligned option
@@ -217,7 +217,7 @@
                     }
                 }
             }
-        }      
+        }
 
         // form labels right aligned option
         @include tablet {
@@ -228,7 +228,7 @@
                     }
                 }
             }
-        }        
+        }
 
         &.m-form--group-seperator-dashed,
         &.m-form--group-seperator {
@@ -278,7 +278,7 @@
 
         &.m-form--group-seperator {
             .m-form__group {
-                border-bottom: 1px solid get-color($skin, panel, '-'); 
+                border-bottom: 1px solid get-color($skin, panel, '-');
 
                 &.m-form__group--last,
                 &:last-child {
@@ -289,7 +289,7 @@
 
         &.m-form--group-seperator-dashed {
             .m-form__group {
-                border-bottom: 1px dashed get-color($skin, panel); 
+                border-bottom: 1px dashed get-color($skin, panel);
 
                 &.m-form__group--last,
                 &:last-child {
@@ -303,10 +303,10 @@
     	}
 
         .m-form__seperator {
-            border-top: 1px solid get-color($skin, panel); 
+            border-top: 1px solid get-color($skin, panel);
 
             &.m-form__seperator--dashed {
-                border-top: 1px dashed get-color($skin, panel); 
+                border-top: 1px dashed get-color($skin, panel);
             }
         }
 
@@ -334,14 +334,14 @@
 
         .m-form__actions {
             &.m-form__actions--line {
-        	   border-top: 1px solid get-color($skin, panel); 
+        	   border-top: 1px solid get-color($skin, panel);
             }
 
             &.m-form__actions--top {
                 &.m-form__actions--line {
                     border-top: 0;
                     border-bottom: 1px solid get-color($skin, panel);
-                }                
+                }
             }
 
             &.m-form__actions--solid {
@@ -376,7 +376,7 @@
     }
 
     .m-form.m-form--state {
-        .has-#{$state} { 
+        .has-#{$state} {
             .input-group .input-group-text,
             .input-group .btn.btn-secondary,
             .form-control:focus,
@@ -398,13 +398,13 @@
 
 //==== Generate Component ====//
 
-//== Component Base
-@include m-build-component--form-base();
-
-//== Component Skin
-@include m-build-component--form-skin();
+////== Component Base
+//@include m-build-component--form-base();
+//
+////== Component Skin
+//@include m-build-component--form-skin();
 
 //== Component States
 @include m-build-component--form-validation-state(success, array-get($m--state-colors, success, base));
 @include m-build-component--form-validation-state(warning, array-get($m--state-colors, warning, base));
-@include m-build-component--form-validation-state(danger, array-get($m--state-colors, danger, base));  
+@include m-build-component--form-validation-state(danger, array-get($m--state-colors, danger, base));
